細かい部分を修正

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
     </main>
     <footer class="w-11/12 lg:w-1/2 mx-auto">
-      <div class="lg:flex lg:justify-between lg:items-center pb-4">
+      <div class="lg:flex lg:justify-between lg:items-center py-4">
         <img class="h-6 mb-2" src="img/logo.svg" alt="" />
         <p>
           Web Entertainment Design Inc.<br />
